fix nullable props, use typped results
