# apps/api/Endpoints/Auth/Login/LoginEndpoint.cs
@@ -1,6 +1,8 @@
+using Microsoft.AspNetCore.Http.HttpResults;
+
 namespace Api.Endpoints.Auth.Login;
 
-public class LoginEndpoint : Endpoint<LoginRequest, LoginResponse, LoginMapper>
+public class LoginEndpoint : Endpoint<LoginRequest, Results<Ok<LoginResponse>, UnauthorizedHttpResult>, LoginMapper>
 {
     private readonly SignInManager<AppUser> _signInManager;
     private readonly UserManager<AppUser> _userManager;
@@ -17,21 +19,22 @@ public class LoginEndpoint : Endpoint<LoginRequest, LoginResponse, LoginMapper>
         AllowAnonymous();
     }
 
-    public override async Task HandleAsync(LoginRequest req, CancellationToken ct)
+    public override async Task<Results<Ok<LoginResponse>, UnauthorizedHttpResult>> ExecuteAsync(
+        LoginRequest req,
+        CancellationToken ct)
     {
         var user = await _userManager.FindByEmailAsync(req.Email);
         if (user is null)
         {
-            ThrowError("Invalid credentials", 401);
+            return TypedResults.Unauthorized();
         };
 
         var result = await _signInManager.PasswordSignInAsync(user, req.Password, true, false);
         if (!result.Succeeded)
         {
-            ThrowError("Invalid credentials", 401);
+            return TypedResults.Unauthorized();
         };
 
-        Response = Map.FromEntity(user);
-        await SendAsync(Response);
+        return TypedResults.Ok(Map.FromEntity(user));
     }
 }
