# apps/api/Endpoints/Auth/Login/LoginModels.cs
@@ -1,4 +1,4 @@
-using System.ComponentModel.DataAnnotations;
+using Microsoft.AspNetCore.Http.HttpResults;
 
 namespace Api.Endpoints.Auth.Login;
 
@@ -10,39 +10,18 @@ public class LoginEndpointSummary : Summary<LoginEndpoint>
         Description = "Creates an authentication cookie that allows users to access other API endpoints.";
         Response<LoginResponse>(200, "The authenticated user.");
         Response<ErrorResponse>(400, "Validation failed.");
-        Response<ErrorResponse>(401, "Invalid credentials.");
+        Response<UnauthorizedHttpResult>(401, "Invalid credentials.");
     }
 }
 
-public class LoginRequest
-{
-    /// <summary>
-    /// The email address of the user wishing to authenticate.
-    /// </summary>
-    public required string Email { get; set; }
-    /// <summary>
-    /// The password of the user wishing to authenticate.
-    /// </summary>
-    public required string Password { get; set; }
-}
+/// <param name="Email">The email address of the user wishing to authenticate.</param>
+/// <param name="Password">The password of the user wishing to authenticate.</param>
+public record LoginRequest(string Email, string Password);
 
-public class LoginResponse
-{
-    /// <summary>
-    /// The unique identifier for the authenticated user.
-    /// </summary>
-    public required int Id { get; set; }
-
-    /// <summary>
-    /// The email address for the authenticated user.
-    /// </summary>
-    public required string Email { get; set; }
-
-    /// <summary>
-    /// If <c>true</c>, two-factor authenticated is enabled for the authenticated user.
-    /// </summary>
-    public required bool IsTwoFactorEnabled { get; set; }
-}
+/// <param name="Id">The unique identifier for the authenticated user.</param>
+/// <param name="Email">The email address for the authenticated user.</param>
+/// <param name="IsTwoFactorEnabled">If <c>true</c>, two-factor authenticated is enabled for the authenticated user.</param>
+public record LoginResponse(int Id, string Email, bool IsTwoFactorEnabled);
 
 public class LoginValidator : Validator<LoginRequest>
 {
